--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -9,8 +9,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   ## tag
   tag:
-    runs-on:
-      - arc
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
