--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -1,6 +1,6 @@
 ---
 name: Update-docs
-on:  # yamllint disable-line rule:truthy
+on:               # yamllint disable-line rule:truthy
   push:
     branches:
       - main
@@ -16,10 +16,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           API_TOKEN_GITHUB: ${{ secrets.ARC_DOCS_API_TOKEN_GITHUB }}
         with:
-          source_file: 'README.md'
-          destination_repo: 'sourcefuse/arc-docs'
-          destination_folder: 'docs/arc-iac-docs/modules/terraform-aws-refarch-waf'
-          user_email: 'github-actions@github.com'
+          source_file: "README.md"
+          destination_repo: "sourcefuse/arc-docs"
+          destination_folder: "docs/arc-iac-docs/modules/terraform-aws-refarch-waf"
+          user_email: "github-actions@github.com"
           user_name: ${{ github.actor }}
           commit_message: ${{ github.event.head_commit.message }}
-          
