--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     name: tflint
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
-      - uses: terraform-linters/setup-tflint@v1
+      - uses: terraform-linters/setup-tflint@v3
         with:
           tflint_version: latest
 
